# obfuscation-paper-2020

./: .gitignore  README.md  arithmetic-substitution-fermat-1.c  arithmetic-substitution-fermat-2.c  constant-unfolding.c  data-encoding.c
doc-src/: obfuscation.tex
vm-implementation/: CMakeLists.txt
vm-implementation/include/: instruction.h  machine.h  prog.h  utils.h
vm-implementation/src/: instruction.c  main.c  utils.c
