SET(PROJECT_NAME B64-Encoder-VM-Obfuscated)
PROJECT(${PROJECT_NAME} C)

CMAKE_MINIMUM_REQUIRED(VERSION 3.7.2)
SET(CMAKE_C_STANDARD 11)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/ CACHE PATH "Install prefix default" FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

IF(CMAKE_COMPILER_IS_GNUCC)
	ADD_DEFINITIONS(-Wall -Werror -pedantic -std=c11)
ENDIF(CMAKE_COMPILER_IS_GNUCC)

FILE(GLOB_RECURSE SRC_LIST FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/src/*.c)
FILE(GLOB_RECURSE HEAD_FILES FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/include/*.h ${PROJECT_BINARY_DIR}/include/*.h)
FILE(GLOB_RECURSE SHARE_LIST FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/share/*)

#
# Set Include Directories
#
INCLUDE_DIRECTORIES(
		"${PROJECT_SOURCE_DIR}/include/"
		"${PROJECT_BINARY_DIR}/include/"
)

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/src/main.c ${SRC_LIST})
INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
